Fixes next page button so that arrow is visible.

--- a/styleguide/src/sass/components/_next-page.scss
+++ b/styleguide/src/sass/components/_next-page.scss
@@ -14,18 +14,20 @@
   box-shadow: 0 0 15px darken($background-d, 20%) inset;
   display: block;
   margin: 1em auto 0;
-  padding: .7em 0 .2em 0;
   position: relative;
   text-align: center;
-  width: 4em;
+  width: 5rem;
+  height: 4rem;
+  padding: 0;
 
-  .icon--small {
+  .icon--med {
     left: 0;
     position: absolute;
     text-indent: 0;
-    top: .7em;
-    bottom: .5em;
+    top: .75rem;
+    bottom: .75rem;
     width: 100%;
+    display: block;
   }
 }
 
